--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -139,7 +139,7 @@ html {
 
 .left-float {
   float: left;
-  clear: non;
+  clear: none;
 }
 
 .right-float {
@@ -156,7 +156,7 @@ html {
 
 .on-top {
   position: relative;
-  z-index: 1;  
+  z-index: 1;
 }
 
 .clearfix {
