--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -59,6 +59,7 @@
     .option {
 
       font-size: 1.7rem;
+      cursor: pointer;
 
       i {
         font-size: 3.8rem;
@@ -267,10 +268,77 @@
   .flag-box {
 
     float: right;
-    width: 12rem;
+    width: 15.5rem;
+    background-color: #f2f2f2;
+    box-shadow: $app-container-box-shadow;
+    color: #783189;
+    padding: 1.1rem;
+    font-size: 1.1rem;
+    border: 1px solid #e4dfe5;
+    line-height: 1.4;
 
     &.hidden {
       display: none;
+    }
+
+    .button {
+      float: right;
+      background-color: #c9add0;
+      color: #ffffff;
+      height: 1.2rem;
+      line-height: 1.2rem;
+      font-size: 0.85rem;
+      padding-left: 0.65rem;
+      padding-right: 0.65rem;
+      margin-left: 0.25rem;
+      font-weight: normal;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #783189;
+      }
+    }
+
+    input[type="radio"] {
+        display:none;
+    }
+    input[type="radio"] + label {
+      cursor: pointer;
+      line-height: 2;
+    }
+    input[type="radio"] + label span {
+      display: inline-block;
+      vertical-align: middle;
+
+    }
+    input[type="radio"] + label span.vis-radio {
+      width: 1.1rem;
+      height: 1.1rem;
+      border-radius: 0.55rem;
+      background-color: #d7c5dd;
+      margin-left: 0.25rem;
+      margin-right: 0.5rem;
+    }
+    input[type="radio"]:checked + label span.vis-radio {
+      background-color: #783189;
+    }
+
+    textarea, input[type="text"], div[contenteditable] {
+      width: 100%;
+      outline: none;
+      resize: none;
+      background-color: white;
+      border: 1px solid #e4dfe5;
+      color: #783189;
+      font-family: $main-font;
+      font-weight: 300;
+      font-size: 1.2rem;
+      margin-bottom: 0.8rem;
+      padding: 0.2rem;
+    }
+
+    div[contenteditable] {
+      min-height: 3.1rem;
     }
 
   }
