--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -145,6 +145,10 @@ html {
 .right-float {
   float: right;
   clear: none;
+
+  & +.right-float {
+    margin-right: 2rem;
+  }
 }
 
 .rem-space-float {
