single-page app complete, but not responsive

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -66,7 +66,7 @@
             <div class="divider"></div>
 
             <div class="key">Ported by:</div><div class="value">{{getUsername author}}</div>
-            <div class="key">License:</div><div class="value">MIT TODO</div>
+            <div class="key">License:</div><div class="value">{{license}}</div>
             <div class="key">Code:</div><div class="value">On Github TODO</div>
             <div class="key">Version:</div><div class="value">{{getLatestVersion}}</div>
 
