--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -77,7 +77,7 @@
 
     .text-section {
 
-      height: 100%;
+      height: 26.5rem;
       overflow-y: auto;
 
       .top-section {
@@ -147,6 +147,10 @@
           font-size: 1.5rem;
           color: #7d627c;
 
+          a {
+            color: #7d627c;
+          }
+
         }
 
       }
@@ -215,6 +219,18 @@
   font-size: 0;
   clear: both;
   margin-top: 1rem;
+  height: 4.5rem;
+
+  &.force-height {
+
+    .button {
+      margin-top: 1rem;
+    }
+  }
+
+  > .hidden {
+    display: none !important;
+  }
 
   .button {
 
@@ -252,6 +268,94 @@
     display: inline-block;
     font-size: 1.5rem;
     color: #7d627c;
+
+  }
+
+  .chip-in-section {
+
+    $border-col: #5fa059;
+    $height: 2rem;
+    display: inline-block;
+
+    .slider-section {
+      display: inline-block;
+      vertical-align: bottom;
+      margin-right: 1.5rem;
+      font-size: 0;
+      color: #7d627c;
+
+      .text {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+      }
+
+      .dollar-sign {
+        display: inline-block;
+        border-top-left-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
+        vertical-align: middle;
+        font-size: 1.5rem;
+        font-family: $main-font;
+        color: #ffffff;
+        background-color: #5fa059;
+        height: $height;
+        line-height: $height;
+        padding-left: 0.5rem;
+      }
+
+      .chip-amount {
+        display: inline-block;
+        position: relative;
+        vertical-align: middle;
+        border: none;
+        font-size: 1.5rem;
+        font-family: $main-font;
+        color: #ffffff;
+        background-color: #5fa059;
+        height: $height;
+        line-height: $height;
+        padding-top: 0;
+        padding-bottom: 0;
+        text-align: center;
+        width: 6rem;
+        outline: none;
+
+        &::-webkit-inner-spin-button,
+        &::-webkit-outer-spin-button {
+          -webkit-appearance: none;
+           margin: 0;
+        }
+      }
+
+      .slider {
+        display: inline-block;
+        width: 40rem;
+        box-shadow: none;
+        border: none;
+        background-color: #e0e0e0;
+        height: $height;
+        vertical-align: middle;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 0.5rem;
+        border-bottom-right-radius: 0.5rem;
+        padding-right: 0.5rem;
+
+        .noUi-handle {
+          box-shadow: none;
+          width: 0;
+          height: $height * 1.5;
+          top: -$height * 0.25;
+          left: 0;
+          border-left: 2px solid #c9c9c9;
+          border-right: 2px solid #c9c9c9;
+
+          &:before, &:after {
+            content: none;
+          }
+        }
+      }
+    }
 
   }
 
@@ -370,7 +474,7 @@
 
   clear: both;
   font-size: 0;
-  margin-top: 5rem;
+  margin-top: 2rem;
   margin-bottom: 5rem;
 
   .owl-carousel {
