fixed html on some buttons

--- a/app/client/templates/appsByMe/appsByMe.html
+++ b/app/client/templates/appsByMe/appsByMe.html
@@ -83,11 +83,11 @@
         <div class="button-block">
           <a class="sandstorm-button primary" href="/upload">
             <i class="icon-myapps"></i>
-            UPLOAD NEW APP
+            <span class="text">UPLOAD NEW APP</span>
           </a>
           <a class="sandstorm-button secondary" href="https://github.com/sandstorm-io/sandstorm/wiki/Porting-Guide" target="_blank">
             <i class="icon-porting-guide"></i>
-            APP PORTING GUIDE
+            <span class="text">APP PORTING GUIDE</span>
           </a>
         </div>
 
