--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -37,7 +37,7 @@
             <div class="edit-button">
               <div class="sandstorm-button neutral small" data-action="update-all-apps">
                 <i class="icon-edit"></i>
-                EDIT
+                <span class="text">EDIT</span>
               </div>
             </div>
 
