--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -164,7 +164,7 @@
           {{updateDescription}}
         </div>
 
-        <a class="read-more">
+        <a class="read-more" href="/appMarket/app/{{../_id}}">
           Read More >
         </a>
 
