--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -24,7 +24,7 @@
 
         <div class="app-name">{{name}}</div>
 
-        <div class="app-author">{{getUsername author}}</div>
+        <a href="/appMarket/author/{{author}}"><div class="app-author">{{getUsername author}}</div></a>
 
         <div class="app-rating">{{{appRating stars}}}</div>
 
@@ -66,7 +66,7 @@
 
       <div class="app-name">{{name}}</div>
 
-      <div class="app-author">{{getUsername author}}</div>
+      <a href="/appMarket/author/{{author}}"><div class="app-author">{{getUsername author}}</div></a>
 
       {{#if ../../../installPage}}
       <div class="app-rating">
