--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -101,6 +101,9 @@
         .app-author-full-width {
           clear: left;
           font-size: 1.7rem;
+          a {
+            color: #783189;
+          }
         }
 
       }
@@ -128,6 +131,9 @@
           margin-bottom: 1rem;
           font-size: 1.7rem;
           color: #783189;
+          a {
+            color: #783189;
+          }
         }
 
         .key {
