fixes #48 by adding non-breaking spaces to value divs

--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -49,10 +49,10 @@
 
                 <div class="half-col">
 
-                  <div class="key">Ported by:</div><div class="value">{{getUsername author}}</div>
-                  <div class="key">License:</div><div class="value">{{license}}</div>
-                  <div class="key">Code:</div><div class="value">{{{codeFormat codeLink}}}</div>
-                  <div class="key">Version:</div><div class="value">{{getLatestVersion}}</div>
+                  <div class="key">Ported by:</div><div class="value">{{getUsername author}}&nbsp;</div>
+                  <div class="key">License:</div><div class="value">{{license}}&nbsp;</div>
+                  <div class="key">Code:</div><div class="value">{{{codeFormat codeLink}}}&nbsp;</div>
+                  <div class="key">Version:</div><div class="value">{{getLatestVersion}}&nbsp;</div>
 
                 </div>
 
