restarted edit app page

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -35,10 +35,10 @@
           <div class="right-float">
 
             <div class="edit-button">
-              <div class="sandstorm-button neutral small" data-action="update-all-apps">
+              <a class="sandstorm-button neutral small" href="/upload/edit/{{_id}}">
                 <i class="icon-edit"></i>
                 <span class="text">EDIT</span>
-              </div>
+              </a>
             </div>
 
             <div class="public-private">
