--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -279,3 +279,36 @@
   }
 
 }
+
+.square-buttons {
+
+  text-align: justify;
+  white-space: nowrap;
+
+  > .square-button {
+
+    display: inline-block;
+    padding-left: 0;
+    padding-right: 0;
+
+  }
+
+  &.two {
+    > .square-button {
+      width: 50%;
+    }
+  }
+
+  &.three {
+    > .square-button {
+      width: 33.3%;
+    }
+  }
+
+  &.four {
+    > .square-button {
+      width: 25%;
+    }
+  }
+
+}
